--- a/public/.env
+++ b/public/.env
@@ -15,8 +15,8 @@ REDIS_URL=""
 
 COOKIE_SECRET=""
 
-JWT_EXPIRES=""
-JWT_REFRESH_EXPIRES=""
+JWT_EXPIRES="5min"
+JWT_REFRESH_EXPIRES="3d"
 
 JWT_ACCESS_KEY=""
 JWT_REFRESH_KEY=""
